--- a/spec/fixtures/vcr_cassettes/OpenWeather_API/Daily_Forecast_Endpoint/returns_a_forecast_for_daily_weather.yml
+++ b/spec/fixtures/vcr_cassettes/OpenWeather_API/Daily_Forecast_Endpoint/returns_a_forecast_for_daily_weather.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.openweathermap.org/data/3.0/onecall?appid=4629ddd2925e26386120921b9b369703&exclude=minutely,hourly&lat=47.427&lon=-121.418
+    uri: https://api.openweathermap.org/data/3.0/onecall?appid=4629ddd2925e26386120921b9b369703&exclude=minutely,hourly&lat=47.427&lon=-121.418&units=imperial
     body:
       encoding: US-ASCII
       string: ''
@@ -21,15 +21,15 @@ http_interactions:
       Server:
       - openresty
       Date:
-      - Fri, 04 Nov 2022 02:24:24 GMT
+      - Sun, 06 Nov 2022 19:39:00 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '5850'
+      - '5074'
       Connection:
       - keep-alive
       X-Cache-Key:
-      - "/data/3.0/onecall?exclude=minutely%2Chourly&lat=47.43&lon=-121.42"
+      - "/data/3.0/onecall?exclude=minutely%2Chourly&lat=47.43&lon=-121.42&units=imperial"
       Access-Control-Allow-Origin:
       - "*"
       Access-Control-Allow-Credentials:
@@ -38,26 +38,23 @@ http_interactions:
       - GET, POST
     body:
       encoding: UTF-8
-      string: '{"lat":47.427,"lon":-121.418,"timezone":"America/Los_Angeles","timezone_offset":-25200,"current":{"dt":1667528663,"sunrise":1667487146,"sunset":1667522757,"temp":272,"feels_like":272,"pressure":1015,"humidity":86,"dew_point":270.2,"uvi":0,"clouds":100,"visibility":805,"wind_speed":0,"wind_deg":0,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13n"},{"id":741,"main":"Fog","description":"fog","icon":"50n"}],"snow":{"1h":2.37}},"daily":[{"dt":1667502000,"sunrise":1667487146,"sunset":1667522757,"moonrise":1667517120,"moonset":1667466180,"moon_phase":0.34,"temp":{"day":273.91,"min":271.33,"max":274.05,"night":273.5,"eve":272.19,"morn":271.66},"feels_like":{"day":273.91,"night":273.5,"eve":272.19,"morn":271.66},"pressure":1024,"humidity":81,"dew_point":270.06,"wind_speed":1.46,"wind_deg":276,"wind_gust":2.3,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":100,"pop":1,"snow":16.4,"uvi":0.69},{"dt":1667588400,"sunrise":1667573638,"sunset":1667609069,"moonrise":1667604600,"moonset":1667557260,"moon_phase":0.38,"temp":{"day":278.88,"min":273.98,"max":280.85,"night":278.71,"eve":280.84,"morn":275.72},"feels_like":{"day":276.67,"night":274.2,"eve":277.93,"morn":275.72},"pressure":1002,"humidity":100,"dew_point":278.03,"wind_speed":7.54,"wind_deg":260,"wind_gust":19.98,"weather":[{"id":502,"main":"Rain","description":"heavy
-        intensity rain","icon":"10d"}],"clouds":100,"pop":1,"rain":85.76,"uvi":0.04},{"dt":1667674800,"sunrise":1667660129,"sunset":1667695382,"moonrise":1667692020,"moonset":1667648160,"moon_phase":0.41,"temp":{"day":272.88,"min":270.92,"max":277.15,"night":271.13,"eve":272.22,"morn":272.59},"feels_like":{"day":267.85,"night":269.07,"eve":267.6,"morn":268.18},"pressure":1009,"humidity":95,"dew_point":271.32,"wind_speed":7.43,"wind_deg":262,"wind_gust":16.66,"weather":[{"id":616,"main":"Snow","description":"rain
-        and snow","icon":"13d"}],"clouds":88,"pop":1,"rain":2.6,"snow":34.33,"uvi":0.29},{"dt":1667761200,"sunrise":1667746620,"sunset":1667781697,"moonrise":1667779500,"moonset":1667735400,"moon_phase":0.45,"temp":{"day":271.94,"min":267.92,"max":273.64,"night":269.17,"eve":272.57,"morn":270.19},"feels_like":{"day":268.45,"night":266.53,"eve":272.57,"morn":267.09},"pressure":1000,"humidity":96,"dew_point":270.45,"wind_speed":2.74,"wind_deg":80,"wind_gust":4.06,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":100,"pop":1,"snow":14.69,"uvi":0.67},{"dt":1667847600,"sunrise":1667833112,"sunset":1667868013,"moonrise":1667866980,"moonset":1667829840,"moon_phase":0.48,"temp":{"day":271.44,"min":260.86,"max":271.76,"night":260.86,"eve":269.26,"morn":270.08},"feels_like":{"day":268.64,"night":254.77,"eve":266.02,"morn":270.08},"pressure":1008,"humidity":89,"dew_point":268.98,"wind_speed":3.09,"wind_deg":95,"wind_gust":3.57,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":99,"pop":1,"snow":10.3,"uvi":1.01},{"dt":1667934000,"sunrise":1667919603,"sunset":1667954332,"moonrise":1667954760,"moonset":1667920680,"moon_phase":0.5,"temp":{"day":267.43,"min":259.32,"max":269.88,"night":259.32,"eve":266.92,"morn":259.71},"feels_like":{"day":263.52,"night":253.42,"eve":263.1,"morn":253.57},"pressure":1020,"humidity":88,"dew_point":264.65,"wind_speed":3.09,"wind_deg":95,"wind_gust":3.37,"weather":[{"id":801,"main":"Clouds","description":"few
-        clouds","icon":"02d"}],"clouds":21,"pop":0,"uvi":2},{"dt":1668020400,"sunrise":1668006094,"sunset":1668040652,"moonrise":1668042780,"moonset":1668011400,"moon_phase":0.54,"temp":{"day":267.34,"min":257.59,"max":269.78,"night":260.57,"eve":268.31,"morn":257.96},"feels_like":{"day":267.34,"night":255.93,"eve":268.31,"morn":251.95},"pressure":1020,"humidity":87,"dew_point":264.4,"wind_speed":2.8,"wind_deg":100,"wind_gust":2.71,"weather":[{"id":600,"main":"Snow","description":"light
-        snow","icon":"13d"}],"clouds":32,"pop":0.2,"snow":0.12,"uvi":2},{"dt":1668106800,"sunrise":1668092585,"sunset":1668126974,"moonrise":1668131220,"moonset":1668102000,"moon_phase":0.58,"temp":{"day":268.67,"min":260.86,"max":270.29,"night":267.6,"eve":268.49,"morn":262.16},"feels_like":{"day":264.29,"night":263.07,"eve":264.15,"morn":256.97},"pressure":1025,"humidity":93,"dew_point":266.7,"wind_speed":3.05,"wind_deg":107,"wind_gust":4.25,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":65,"pop":0.74,"snow":3.12,"uvi":2}],"alerts":[{"sender_name":"NWS
-        Seattle (Northwest Washington)","event":"Flood Watch","start":1667516460,"end":1667692800,"description":"...FLOOD
-        WATCH REMAINS IN EFFECT FROM 11 PM PDT THIS EVENING THROUGH\nSATURDAY AFTERNOON...\n*
-        WHAT...Flooding caused by excessive rainfall continues to be\npossible.\n*
-        WHERE...A portion of west central Washington, including the\nfollowing counties,
-        King and Snohomish.\n* WHEN...From 11 PM PDT this evening through Saturday
-        afternoon.\n* IMPACTS...Excessive runoff may result in flooding of rivers,\ncreeks,
-        streams, and other low-lying and flood-prone locations.\n* ADDITIONAL DETAILS...\n-
-        A potent weather system will bring heavy rainfall to the\nregion late tonight
-        through early Saturday. This rainfall\nwill result in rapid rises and potential
-        for flooding along\narea rivers.\n- http://www.weather.gov/safety/flood","tags":["Flood"]},{"sender_name":"NWS
-        Seattle (Northwest Washington)","event":"Winter Weather Advisory","start":1667520000,"end":1667548800,"description":"...WINTER
-        WEATHER ADVISORY IN EFFECT UNTIL 1 AM PDT FRIDAY ABOVE\n3500 FEET...\n* WHAT...Snow
-        expected above 3500 feet. Total snow accumulations\nof 4 to 8 inches.\n* WHERE...Cascade
-        mountains and valleys of Snohomish and King\nCounties, including Darrington,
-        Index, Skykomish, Stevens\nPass, and Snoqualmie Pass.\n* WHEN...Until 1 AM
-        PDT Friday.\n* IMPACTS...Plan on slippery road conditions.","tags":[]}]}'
-  recorded_at: Fri, 04 Nov 2022 02:24:24 GMT
+      string: '{"lat":47.427,"lon":-121.418,"timezone":"America/Los_Angeles","timezone_offset":-28800,"current":{"dt":1667763491,"sunrise":1667746620,"sunset":1667781697,"temp":31.05,"feels_like":31.05,"pressure":999,"humidity":93,"dew_point":29.48,"uvi":0.71,"clouds":100,"visibility":10000,"wind_speed":0,"wind_deg":0,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}]},"daily":[{"dt":1667761200,"sunrise":1667746620,"sunset":1667781697,"moonrise":1667779500,"moonset":1667735400,"moon_phase":0.45,"temp":{"day":31.46,"min":24.26,"max":32.83,"night":28.2,"eve":29.48,"morn":27.91},"feels_like":{"day":25,"night":28.2,"eve":25.05,"morn":21.54},"pressure":1000,"humidity":93,"dew_point":29.88,"wind_speed":6.78,"wind_deg":96,"wind_gust":10.8,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":100,"pop":1,"snow":13.08,"uvi":0.71},{"dt":1667847600,"sunrise":1667833112,"sunset":1667868013,"moonrise":1667866980,"moonset":1667829840,"moon_phase":0.48,"temp":{"day":32.72,"min":20.62,"max":33.53,"night":20.79,"eve":26.91,"morn":27.93},"feels_like":{"day":32.72,"night":12.52,"eve":20.46,"morn":27.93},"pressure":1005,"humidity":90,"dew_point":28.6,"wind_speed":6.85,"wind_deg":98,"wind_gust":10.2,"weather":[{"id":601,"main":"Snow","description":"snow","icon":"13d"}],"clouds":89,"pop":1,"snow":4.61,"uvi":1.14},{"dt":1667934000,"sunrise":1667919603,"sunset":1667954332,"moonrise":1667954760,"moonset":1667920680,"moon_phase":0.5,"temp":{"day":29.8,"min":15.31,"max":32.56,"night":18.19,"eve":23.32,"morn":15.42},"feels_like":{"day":23.99,"night":10.29,"eve":16.39,"morn":5.76},"pressure":1017,"humidity":87,"dew_point":24.96,"wind_speed":6.98,"wind_deg":95,"wind_gust":8.61,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"clouds":100,"pop":0.23,"uvi":1.06},{"dt":1668020400,"sunrise":1668006094,"sunset":1668040652,"moonrise":1668042780,"moonset":1668011400,"moon_phase":0.54,"temp":{"day":33.89,"min":16.66,"max":34.02,"night":16.66,"eve":21.27,"morn":17.06},"feels_like":{"day":31.17,"night":16.66,"eve":21.27,"morn":10.38},"pressure":1017,"humidity":85,"dew_point":28.29,"wind_speed":5.32,"wind_deg":88,"wind_gust":4.32,"weather":[{"id":803,"main":"Clouds","description":"broken
+        clouds","icon":"04d"}],"clouds":72,"pop":0,"uvi":1.33},{"dt":1668106800,"sunrise":1668092585,"sunset":1668126974,"moonrise":1668131220,"moonset":1668102000,"moon_phase":0.58,"temp":{"day":33.31,"min":16.12,"max":33.87,"night":21.4,"eve":30.29,"morn":21.52},"feels_like":{"day":33.31,"night":13.14,"eve":30.29,"morn":21.52},"pressure":1026,"humidity":95,"dew_point":30.58,"wind_speed":6.51,"wind_deg":100,"wind_gust":7.18,"weather":[{"id":600,"main":"Snow","description":"light
+        snow","icon":"13d"}],"clouds":73,"pop":0.28,"snow":0.12,"uvi":1.28},{"dt":1668193200,"sunrise":1668179076,"sunset":1668213298,"moonrise":1668220140,"moonset":1668192180,"moon_phase":0.61,"temp":{"day":28.94,"min":19,"max":33.17,"night":20.3,"eve":29.59,"morn":19.94},"feels_like":{"day":20.5,"night":9.97,"eve":21.56,"morn":10.13},"pressure":1025,"humidity":89,"dew_point":24.31,"wind_speed":9.15,"wind_deg":102,"wind_gust":13.24,"weather":[{"id":801,"main":"Clouds","description":"few
+        clouds","icon":"02d"}],"clouds":17,"pop":0,"uvi":2},{"dt":1668279600,"sunrise":1668265566,"sunset":1668299624,"moonrise":1668309720,"moonset":1668281880,"moon_phase":0.64,"temp":{"day":32.77,"min":19.69,"max":36.09,"night":20.97,"eve":32.16,"morn":19.9},"feels_like":{"day":26.46,"night":11.46,"eve":26.11,"morn":9.82},"pressure":1023,"humidity":81,"dew_point":26.06,"wind_speed":8.55,"wind_deg":101,"wind_gust":10.49,"weather":[{"id":801,"main":"Clouds","description":"few
+        clouds","icon":"02d"}],"clouds":21,"pop":0,"uvi":2},{"dt":1668366000,"sunrise":1668352056,"sunset":1668385952,"moonrise":1668399660,"moonset":1668370920,"moon_phase":0.67,"temp":{"day":31.96,"min":21.85,"max":35.02,"night":25.7,"eve":31.03,"morn":22.32},"feels_like":{"day":25.09,"night":17.06,"eve":24.19,"morn":13.21},"pressure":1027,"humidity":85,"dew_point":26.33,"wind_speed":8.3,"wind_deg":101,"wind_gust":10.54,"weather":[{"id":802,"main":"Clouds","description":"scattered
+        clouds","icon":"03d"}],"clouds":30,"pop":0,"uvi":2}],"alerts":[{"sender_name":"NWS
+        Seattle (Northwest Washington)","event":"Winter Weather Advisory","start":1667755200,"end":1667779200,"description":"...WINTER
+        WEATHER ADVISORY REMAINS IN EFFECT UNTIL 4 PM PST THIS\nAFTERNOON ABOVE 2000
+        FEET...\n* WHAT...Snow above 2000 feet. Additional snow accumulations of 3\nto
+        6 inches.\n* WHERE...Olympic mountains and valleys, including Hurricane\nRidge,
+        Cascade mountains and valleys of Whatcom and Skagit\nCounties, including the
+        Mount Baker Ski Area, Cascade mountains\nand valleys of Snohomish and King
+        Counties, including Stevens\nPass, and Snoqualmie Pass and Cascade mountains
+        and valleys of\nPierce and Lewis Counties, including the Crystal Mountain
+        Ski\nArea, and Paradise on Mount Rainier.\n* WHEN...Until 4 PM PST this afternoon.\n*
+        IMPACTS...Plan on slippery road conditions.","tags":[]}]}'
+  recorded_at: Sun, 06 Nov 2022 19:39:00 GMT
 recorded_with: VCR 6.1.0
